# Vessel_Project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
IADE_Analyzer_Setup/: IADE_Analyzer_Setup.vdproj
codes/Algorithm/: CMakeLists.txt
codes/Algorithm/ImageSliceBySliceAccumulate/: CMakeLists.txt  ImageSliceBySliceAccumulate.cxx  ImageSliceBySliceAccumulate.h
codes/Algorithm/MaximumWallThickness/: CMakeLists.txt  MaximumWallThickness.h  MaximumWallThickness2.cpp  MaximumWallThickness2.h
codes/Algorithm/Measurements/: CMakeLists.txt  MeasurementFor2D.cxx
codes/Algorithm/PolylineToTubularVolume/: vtkPolylineToTubularVolume.cpp
codes/Controller/: CMakeLists.txt  DataProcessor.cpp  DataProcessor.h  IADEIOManager.cpp  IADEIOManager.h  IADEInteractorStyleSwitch.cxx  IADEInteractorStyleSwitch.h  IADEInteractorStyleSwitch3D.cxx  IADEInteractorStyleSwitch3D.h  IADEMeasurement.cpp  IADEMeasurement.h  IOManager.cpp  IOManager.h  ImageRegistration.cxx  ImageRegistration.h  ImageViewer.cxx  InteractorStyleSwitch.cxx  InteractorStyleSwitch.h  Measurement.cpp  Measurement.h  PlaqueQuantIOManager.cpp  PlaqueQuantIOManager.h  PlaqueQuantMeasurement.cpp  PlaqueQuantMeasurement.h  RegistrationWizard.cxx  RegistrationWizard.h  StyleSwitch3D.h  StyleSwitchMacro.h
codes/Controller/InteractorStyles/: AbstractInteractorStyle.cxx  AbstractInteractorStyle.h  AbstractInteractorStyleImage.cxx  AbstractInteractorStyleImage.h  AbstractInteractorStyleSurface.cxx  AbstractInteractorStyleSurface.h  AbstractNavigation.cxx  AbstractNavigation.h  AbstractSurfaceCenterLine.cxx  AbstractSurfaceCenterLine.h  CMakeLists.txt  CenterlineSurfaceViewer.cxx  CenterlineSurfaceViewer.h  ImageViewer.cxx  ImageViewer.h  InteractorStyleNavigation.cxx  InteractorStyleNavigation.h  InteractorStylePaintBrush.cxx  InteractorStylePaintBrush.h  InteractorStylePolygonDraw.cxx  InteractorStylePolygonDraw.h  InteractorStylePolygonDraw2.cxx  InteractorStylePolygonDraw2.h  InteractorStyleRuler.cxx  InteractorStyleRuler.h  InteractorStyleSeedsPlacer.cxx  InteractorStyleSeedsPlacer.h  InteractorStyleSurfaceCenterLine.cxx  InteractorStyleSurfaceCenterLine.h  InteractorStyleSurfaceCenterLineCurvedNavigation.cxx  InteractorStyleSurfaceCenterLineCurvedNavigation.h  InteractorStyleSurfaceCenterLineDistanceFindMaximumRadius.cxx  InteractorStyleSurfaceCenterLineDistanceFindMaximumRadius.h  InteractorStyleSurfaceCenterLineFindMaximumRadius.cxx  InteractorStyleSurfaceCenterLineFindMaximumRadius.h  InteractorStyleSurfaceCenterLinePerpendicularMeasurement.cxx  InteractorStyleSurfaceCenterLinePerpendicularMeasurement.h  InteractorStyleSurfaceCenterLineReslicer.cxx  InteractorStyleSurfaceCenterLineReslicer.h  InteractorStyleSurfaceCenterLineSimpleClipping.cxx  (+66 more)
codes/Controller/SurfaceViewer_test/: SurfaceViewer_test.cpp
codes/Core/: CMakeLists.txt  Core.cpp  Core.h
codes/EncryptionAuthentication/: CMakeLists.txt
codes/Main/: CMakeLists.txt  main.cpp
codes/Main/resources/: IADE_Analyzer.qrc  IADE_Analyzer.rc  resource.h
codes/Model/: CMakeLists.txt  IADEImageManager.cpp  IADEImageManager.h  IADEOverlay.cpp  IADEOverlay.h  IVtkImageData.cpp  IVtkImageData.h  ImageManager.cpp  ImageManager.h  Overlay.cpp  Overlay.h
codes/RegistrationWizard/: RegistrationWizard.cpp  RegistrationWizard.h  main.cpp
codes/View/: CMakeLists.txt  IADEMeasurementWidget.cpp  IADEMeasurementWidget.h  IADEMeasurementWidget.ui  LabelWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeasurementWidget.cpp  MeasurementWidget.h  MeasurementWidget.ui  ModuleWidget.cpp  ModuleWidget.h  ModuleWidget.ui  Switch3DWidget.cpp  Switch3DWidget.h  ViewerWidget.cpp  ViewerWidget.h  ViewerWidget.ui
codes/View/RegistrationWizard/: CMakeLists.txt  RegistrationWizard.cpp
codes/Widgets/: CMakeLists.txt  ContourWidgetSeries.cxx  ContourWidgetSeries.h  ContourWidgetSeriesRepresentation.h  PerpendicularMeasurementLineWidget.cxx  PerpendicularMeasurementLineWidget.h  vtkROIWidget.cxx
resources/: IADE_Analyzer.qrc
